--- a/example_prob_replication.ipynb
+++ b/example_prob_replication.ipynb
@@ -19,16 +19,19 @@
    "source": [
     "prob = LpProblem('NutritionProblem',LpMinimize)\n",
     "x1 = LpVariable('KaleAmt', 0)\n",
-    "x2 = LpVariable('SardinesAmt',0)"
+    "x2 = LpVariable('SardinesAmt',0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d9027429-ffea-4ced-98f3-155092b63c70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "foods = ['Kale', 'Sardines']\n",
+    "calories = {}"
+   ]
   }
  ],
  "metadata": {
