first stab at optimization under constraints

--- a/whfoods.ipynb
+++ b/whfoods.ipynb
@@ -3730,7 +3730,7 @@
    "outputs": [],
    "source": [
     "nv_df_cnstr.to_csv('./Data_formatted/nv_df.csv')\n",
-    "constants.to_csv"
+    "constants.to_csv('')"
    ]
   },
   {
