--- a/03_Notebooks/lpp_max_servings.ipynb
+++ b/03_Notebooks/lpp_max_servings.ipynb
@@ -38,9 +38,10 @@
     }
    ],
    "source": [
-    "foods = pd.read_csv('./Data_formatted/nv_df.csv', index_col='Unnamed: 0')\n",
+    "foods = pd.read_csv('./Data_formatted/nv_df.csv', index_col = 'Unnamed: 0')\n",
     "foods.index = [food.replace('-','_') for food in foods.index]\n",
-    "constraints = pd.read_csv('./Data_formatted/constraints.csv', index_col = 'Unnamed: 0')\n",
+    "constraints = pd.read_csv('./Data_formatted/constraints.csv', \n",
+    "                          index_col = 'Unnamed: 0')\n",
     "constraints = constraints[1:] # remove calories\n",
     "# Adjust amino acid requirements for bodyweight\n",
     "usr_mass = input(\"How many kilos do you weigh?\")\n",
